sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/testsuite.duarouter
# Vehicle's depart is empty
vehicle_depart_empty

# Vehicle's depart is not numeric
vehicle_depart_false

# Vehicle's depart is not given
vehicle_depart_missing


# Vehicle's id is empty
vehicle_id_empty

# Vehicle's id is not given
vehicle_id_missing


# Vehicle's route id is empty
vehicle_route_empty

# Vehicle's route id is not given
vehicle_route_missing

# Vehicle's route is not known
vehicle_route_unknown


# Vehicle's departlane is false
vehicle_false_departlane

# Vehicle's departpos is false
vehicle_false_departpos

# Vehicle's departspeed is false
vehicle_false_departspeed

# Vehicle's arrivallane is false
vehicle_false_arrivallane

# Vehicle's arrivalpos is false
vehicle_false_arrivalpos

# Vehicle's arrivalspeed is false
vehicle_false_arrivalspeed




